made changes to the contractor details page, aligned the contractor info and fixed up other items

--- a/src/ReactComponents/ContractorDetails/ContractorDetails.scss
+++ b/src/ReactComponents/ContractorDetails/ContractorDetails.scss
@@ -1,5 +1,5 @@
 body {
-  background-color: white;
+  background-color: hsl(0, 0%, 95%);
 }
 
 @mixin container {
@@ -9,11 +9,10 @@ body {
 }
 
 @mixin section {
-  border: 1px solid silver;
   border-radius: 8px;
   margin: 10px 0px;
-  width: 85%;
-  height: fit-content;
+  width: 100%;
+  height: 100%;
   padding: 1px;
   padding-bottom: 10px;
 }
@@ -26,7 +25,8 @@ body {
 
 .contractor-details {
   display: grid;
-  grid-template-columns: 40% 60%;
+  grid-template-columns: 25% 75%;
+  grid-gap: 2rem;
   width: 100%;
 
   //* ----- PROFILE ----- */
@@ -34,19 +34,21 @@ body {
 
   &__profile {
     @include section();
-
-    grid-column: 1/2;
-    color: rgb(76, 76, 76);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
     &__profile-img {
-      align-items: center;
-      border-radius: 100%;
+      display: flex;
+      text-align: center;
+      border-radius: 50%;
+      border: none;
       overflow: hidden;
-      margin-left: 22%;
       padding: 0;
-      height: 200px;
-      width: 200px;
-      border: 5px solid #ccc;
+      height: 150px;
+      width: 150px;
+      border: 4px solid silver;
+      margin-bottom: 10px;
 
       &__profile-picture {
         width: 100%;
@@ -73,32 +75,41 @@ body {
         margin-top: 1%;
         margin-right: 1%;
         span {
-          margin-right: 5px;
+          margin-left: 3px;
+          font-size: 13px;
+          color: black;
         }
       }
     }
     &__about {
-      width: 90%;
+      width: 100%;
+
+      margin-bottom: 15px;
+      display: flex;
+      text-align: start;
+
       p {
-        margin: 5px 0px;
-        margin-left: 25px;
-        text-align: left;
+        display: block;
+        font-size: 16px;
       }
     }
     &__info {
-      width: 90%;
-      background-color: hsl(229, 100%, 95%);
-
-      border-radius: 8px;
-      padding: 20px;
       display: flex;
       flex-direction: column;
-      margin-left: 25px;
+      width: 100%;
+      background-color: hsl(229, 100%, 95%);
+      border-radius: 16px;
+      padding: 15px;
+      font-size: 13px;
+
+      a {
+        color: black;
+      }
 
       p {
         margin: 5px 0px;
         text-align: left;
-        font-size: 15px;
+        display: flex;
       }
 
       svg {
@@ -108,10 +119,11 @@ body {
       b {
         margin-right: 5px;
         font-weight: bold;
-        font-size: 15px;
       }
     }
   }
+
+  // The right div
   &__details {
     @include container;
     grid-column: 2/3;
@@ -132,7 +144,8 @@ body {
     &__reviews {
       @include section();
       padding-top: 0;
-
+      border: 0.5px solid silver;
+      background-color: white;
       &__header {
         display: flex;
         margin: 15px 2%;
